force-app/main/default/objects/HabilidadeContato__c/HabilidadeContato__c.object-meta.xml
<CustomObject>
    <description>Usado para efetuar a junção entre os objetos Habilidade e Contato.</description>
    <label>Habilidade do Contato</label>
    <nameField>
        <displayFormat>HABIL-{0000}</displayFormat>
        <label>Habilidades do Contato</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Habilidades do Contato</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>