force-app/main/default/objects/HabilidadeContato__c/fields/Contato__c.field-meta.xml
<CustomField>
    <fullName>Contato__c</fullName>
    <label>Contato</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Habilidades do Contato</relationshipLabel>
    <relationshipName>HabilidadesContato</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>