force-app/main/default/objects/HabilidadeContato__c/fields/NivelHabilidade__c.field-meta.xml
<CustomField>
    <fullName>NivelHabilidade__c</fullName>
    <description>Campo para armazenar o nivel de habilidade do contato</description>
    <inlineHelpText>Selecione de 0 a 100 para definir o nivel de habilidade do contato atual</inlineHelpText>
    <label>Nivel Habilidade</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>