force-app/main/default/objects/HabilidadeContato__c/fields/Ranking__c.field-meta.xml
<CustomField>
    <fullName>Ranking__c</fullName>
    <description>Usado para indicar a posição da habilidade ante o Ranking de habilidades.</description>
    <inlineHelpText>Usado para indicar a posição da habilidade ante o Ranking de habilidades.</inlineHelpText>
    <label>Ranking</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>